# pyssage

./: .gitattributes  README.md  pyproject.toml
pyssage/: appender.py  formatter.py  logger.py
pyssage/components/: restrictions.py
pyssage/log/: log.py  message.py
